--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@ footer {
   background-color: lightblue;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   position: fixed;
   width: 100%;
   bottom: 0;
