--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -5,6 +5,6 @@ main {
   /* margin-bottom: 10px; */
   background-size: cover;
   height: 870px;
-  align-content: flex-start;
+  align-content: center;
   position: relative;
 }
